Fixed overflow bug

--- a/src/app/shared/other/other.component.less
+++ b/src/app/shared/other/other.component.less
@@ -1,4 +1,5 @@
 @primary-red-color: #F40009;
+
 div {
   margin: 50px 0;
   & p {
@@ -6,21 +7,13 @@ div {
   }
 }
 
-.btn-other {
-  background: @primary-red-color;
-  color: white;
-  border-radius: 10px;
-  border: 2px solid @primary-red-color;
-  font-weight: 500;
-  transition-duration: 0.4s;
-  padding: 10px;
-  opacity: 0.8;
+.btn {
   width: 200px;
-}
 
-.btn-other:hover,
-.btn-other:focus {
-  background: white;
-  color: @primary-red-color;
-  outline: none;
+  &:hover,
+  &:focus {
+    background: white;
+    color: @primary-red-color;
+    outline: none;
+  }
 }
